Fixed alignment

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -69,6 +69,16 @@
     box-shadow: 6px 13px 23px -5px rgba(0, 0, 0, 0.46);
 }
 
+@media only screen and (max-width: 788px) {
+  .about-image img {
+    max-width: 200px;
+  }
+}
+
+.about-image:hover {
+  transform: translateY(-7px);
+}
+
 @media only screen and (max-width: 600px) {
     #about {
       height: unset;
